--- a/Dashboard.html
+++ b/Dashboard.html
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Streaming</a>
+          <a class="navbar-brand" href="#">Streaming Clinet</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -65,10 +65,10 @@
             <li><a href="#">Export</a></li>
           </ul>
           <ul class="nav nav-sidebar">
-            <li><a href="#">Subject 1</a></li>
-            <li><a href="#">Subject 2</a></li>
-            <li><a href="#">Subject 3</a></li>
-            <li><a href="#">Subject 4</a></li>
+            <li><a href="#">Artificial Intelligence</a></li>
+            <li><a href="#">Literature</a></li>
+            <li><a href="#">PHP</a></li>
+            <li><a href="#">Web</a></li>
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
@@ -76,151 +76,62 @@
 
           <div class="row placeholders">
             <div class="col-xs-6 col-sm-3 placeholder">
-             <img data-src="holdr.js/200x200/auto/sky" class="img-responsive" alt="Generic placeholder thumbnail" src="bootstrap/images/subject1.jpg">
-              <h4>Subject 1</h4>
-              <span class="text-muted">Teacher 1</span>
+             <a href="#"><img data-src="holdr.js/200x200/auto/sky" class="img-responsive" alt="Generic placeholder thumbnail" src="bootstrap/images/subject1.jpg"></a>
+              <h4><a href="#">Artificial Intelligence</a></h4>
+              <span class="text-muted"><a href="#">Teacher 1</a></span>
             </div>
             <div class="col-xs-6 col-sm-3 placeholder">
-              <img data-src="holder.js/200x200/auto/vine" class="img-responsive" alt="Generic placeholder thumbnail" src="bootstrap/images/subject2.png">
-              <h4>Subject 2</h4>
-              <span class="text-muted">Teacher 2</span>
+              <a href="#"><img data-src="holder.js/200x200/auto/vine" class="img-responsive" alt="Generic placeholder thumbnail" src="bootstrap/images/subject2.png"></a>
+              <h4><a href="#">Literature</a></h4>
+              <span class="text-muted"><a href="#">Teacher 2</a></span>
             </div>
             <div class="col-xs-6 col-sm-3 placeholder">
-              <img data-src="holder.js/200x200/auto/sky" class="img-responsive" alt="Generic placeholder thumbnail" src="bootstrap/images/subject5.jpg" >
-              <h4>Subject 3</h4>
-              <span class="text-muted">Teacher 3</span>
+              <a href="#"><img data-src="holder.js/200x200/auto/sky" class="img-responsive" alt="Generic placeholder thumbnail" src="bootstrap/images/subject5.jpg" ></a>
+              <h4><a href="#">PHP</a></h4>
+              <span class="text-muted"><a href="#">Teacher 3</a></span>
             </div>
             <div class="col-xs-6 col-sm-3 placeholder">
-              <img data-src="holder.js/200x200/auto/vine" class="img-responsive" alt="Generic placeholder thumbnail" src="bootstrap/images/subject4.png" >
-              <h4>Subject 4</h4>
-              <span class="text-muted">Teacher 4</span>
+              <a href="#"><img data-src="holder.js/200x200/auto/vine" class="img-responsive" alt="Generic placeholder thumbnail" src="bootstrap/images/subject3.jpg" ></a>
+              <h4><a href="#">Web Programming</a></h4>
+              <span class="text-muted"><a href="#">Teacher 4</a></span>
             </div>
           </div>
 
-          <h2 class="sub-header">Section title</h2>
+          <h2 class="sub-header">Schedule</h2>
           <div class="table-responsive">
             <table class="table table-striped">
               <thead>
                 <tr>
-                  <th>#</th>
-                  <th>Header</th>
-                  <th>Header</th>
-                  <th>Header</th>
-                  <th>Header</th>
+                  <th>Time</th>
+                  <th>Subject</th>
+                  <th>Description</th>
+                  <th>Attent</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
-                  <td>1,001</td>
-                  <td>Lorem</td>
-                  <td>ipsum</td>
-                  <td>dolor</td>
-                  <td>sit</td>
+                  <td>12h 15-12-2015</td>
+                  <td><a href="#">Artificial Intelligence</a></td>
+                  <td>Artificial Intelligence Tut 1</td>
+                  <td><button type="button" class="btn btn-default navbar-btn">Go to class</button></td>
                 </tr>
                 <tr>
-                  <td>1,002</td>
-                  <td>amet</td>
-                  <td>consectetur</td>
-                  <td>adipiscing</td>
-                  <td>elit</td>
+                  <td>2h 19-12-2015</td>
+                  <td><a href="#">Literature</a></td>
+                  <td>Literature Poem</td>
+                  <td><button type="button" class="btn btn-default navbar-btn">Go to class</button></td>
                 </tr>
                 <tr>
-                  <td>1,003</td>
-                  <td>Integer</td>
-                  <td>nec</td>
-                  <td>odio</td>
-                  <td>Praesent</td>
+                  <td>10h 21-12-2015</td>
+                  <td><a href="#">Artificial Intelligence</a></td>
+                  <td>TUT 5</td>
+                  <td><button type="button" class="btn btn-default navbar-btn">Go to class</button></td>
                 </tr>
                 <tr>
-                  <td>1,003</td>
-                  <td>libero</td>
-                  <td>Sed</td>
-                  <td>cursus</td>
-                  <td>ante</td>
-                </tr>
-                <tr>
-                  <td>1,004</td>
-                  <td>dapibus</td>
-                  <td>diam</td>
-                  <td>Sed</td>
-                  <td>nisi</td>
-                </tr>
-                <tr>
-                  <td>1,005</td>
-                  <td>Nulla</td>
-                  <td>quis</td>
-                  <td>sem</td>
-                  <td>at</td>
-                </tr>
-                <tr>
-                  <td>1,006</td>
-                  <td>nibh</td>
-                  <td>elementum</td>
-                  <td>imperdiet</td>
-                  <td>Duis</td>
-                </tr>
-                <tr>
-                  <td>1,007</td>
-                  <td>sagittis</td>
-                  <td>ipsum</td>
-                  <td>Praesent</td>
-                  <td>mauris</td>
-                </tr>
-                <tr>
-                  <td>1,008</td>
-                  <td>Fusce</td>
-                  <td>nec</td>
-                  <td>tellus</td>
-                  <td>sed</td>
-                </tr>
-                <tr>
-                  <td>1,009</td>
-                  <td>augue</td>
-                  <td>semper</td>
-                  <td>porta</td>
-                  <td>Mauris</td>
-                </tr>
-                <tr>
-                  <td>1,010</td>
-                  <td>massa</td>
-                  <td>Vestibulum</td>
-                  <td>lacinia</td>
-                  <td>arcu</td>
-                </tr>
-                <tr>
-                  <td>1,011</td>
-                  <td>eget</td>
-                  <td>nulla</td>
-                  <td>Class</td>
-                  <td>aptent</td>
-                </tr>
-                <tr>
-                  <td>1,012</td>
-                  <td>taciti</td>
-                  <td>sociosqu</td>
-                  <td>ad</td>
-                  <td>litora</td>
-                </tr>
-                <tr>
-                  <td>1,013</td>
-                  <td>torquent</td>
-                  <td>per</td>
-                  <td>conubia</td>
-                  <td>nostra</td>
-                </tr>
-                <tr>
-                  <td>1,014</td>
-                  <td>per</td>
-                  <td>inceptos</td>
-                  <td>himenaeos</td>
-                  <td>Curabitur</td>
-                </tr>
-                <tr>
-                  <td>1,015</td>
-                  <td>sodales</td>
-                  <td>ligula</td>
-                  <td>in</td>
-                  <td>libero</td>
+                  <td>1h 1-12-2015</td>
+                  <td><a href="#">Web Programming</a></td>
+                  <td>AJAX and HTML</td>
+                  <td><button type="button" class="btn btn-default navbar-btn">Go to class</button></td>
                 </tr>
               </tbody>
             </table>
