--- a/lab_6.html
+++ b/lab_6.html
@@ -7,7 +7,6 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-
     <title>Lab 6 - 51102239 - TruongThanhNghia</title>
 
     <!-- Bootstrap core CSS -->
@@ -82,46 +81,65 @@
         <div class="col-xs-8 col-sm-8">
             <h2>Top Products</h2>
             <hr>
-	        <div class="row">
-	            <div class="col-xs-6 col-lg-4 placeholders ">
-	                <a href="#"><img data-src="holdr.js/200x200/auto/sky" class="img-thumbnail .img-responsive" alt="Generic placeholder thumbnail" src="bootstrap/images/product1.jpg"></a>
-	                <h5>Price 10$</h5>
-	                <button type="button" class="btn btn-default navbar-btn">Buy Now</button>
-	            </div><!--/.col-xs-6.col-lg-4-->
-	            <div class="col-xs-6 col-lg-4 placeholders ">
-	                <a href="#"><img data-src="holdr.js/200x200/auto/sky" class="img-thumbnail .img-responsive" alt="Generic placeholder thumbnail" src="bootstrap/images/product2.jpg"></a>
-	                <h5>Price 10$</h5>
-	                <button type="button" class="btn btn-default navbar-btn">Buy Now</button>
-	            </div><!--/.col-xs-6.col-lg-4-->
-	            <div class="col-xs-6 col-lg-4 placeholders ">
-	                <a href="#"><img data-src="holdr.js/200x200/auto/sky" class="img-thumbnail .img-responsive" alt="Generic placeholder thumbnail" src="bootstrap/images/product3.jpg"></a>
-	                <h5>Price 10$</h5>
-	                <button type="button" class="btn btn-default navbar-btn">Buy Now</button>
-	            </div><!--/.col-xs-6.col-lg-4-->
-	            <div class="col-xs-6 col-lg-4 placeholders ">
-	                <a href="#"><img data-src="holdr.js/200x200/auto/sky" class="img-thumbnail .img-responsive" alt="Generic placeholder thumbnail" src="bootstrap/images/product4.jpg"></a>
-	                <h5>Price 10$</h5>
-	                <button type="button" class="btn btn-default navbar-btn">Buy Now</button>
-	            </div><!--/.col-xs-6.col-lg-4-->
-	            <div class="col-xs-6 col-lg-4 placeholders ">
-	                <a href="#"><img data-src="holdr.js/200x200/auto/sky" class="img-thumbnail .img-responsive" alt="Generic placeholder thumbnail" src="bootstrap/images/product5.jpg"></a>
-	                <h5>Price 10$</h5>
-	                <button type="button" class="btn btn-default navbar-btn">Buy Now</button>
-	            </div><!--/.col-xs-6.col-lg-4-->
-	            <div class="col-xs-6 col-lg-4 placeholders ">
-	                <a href="#"><img data-src="holdr.js/200x200/auto/sky" class="img-thumbnail .img-responsive" alt="Generic placeholder thumbnail" src="bootstrap/images/product6.jpg"></a>
-	                <h5>Price 10$</h5>
-	                <button type="button" class="btn btn-default navbar-btn">Buy Now</button>
-	            </div><!--/.col-xs-6.col-lg-4-->
-	            
-	        </div><!--/row-->
+  	        <div class="row">
+  	            <div class="col-xs-6 col-lg-4 placeholders ">
+  	                <a href="#"><img data-src="holdr.js/200x200/auto/sky" class="img-thumbnail .img-responsive" alt="Generic placeholder thumbnail" src="bootstrap/images/product1.jpg"></a>
+  	                <h5>Price 10$</h5>
+  	                <button type="button" class="btn btn-default navbar-btn">Buy Now</button>
+  	            </div><!--/.col-xs-6.col-lg-4-->
+  	            <div class="col-xs-6 col-lg-4 placeholders ">
+  	                <a href="#"><img data-src="holdr.js/200x200/auto/sky" class="img-thumbnail .img-responsive" alt="Generic placeholder thumbnail" src="bootstrap/images/product2.jpg"></a>
+  	                <h5>Price 10$</h5>
+  	                <button type="button" class="btn btn-default navbar-btn">Buy Now</button>
+  	            </div><!--/.col-xs-6.col-lg-4-->
+  	            <div class="col-xs-6 col-lg-4 placeholders ">
+  	                <a href="#"><img data-src="holdr.js/200x200/auto/sky" class="img-thumbnail .img-responsive" alt="Generic placeholder thumbnail" src="bootstrap/images/product3.jpg"></a>
+  	                <h5>Price 10$</h5>
+  	                <button type="button" class="btn btn-default navbar-btn">Buy Now</button>
+  	            </div><!--/.col-xs-6.col-lg-4-->
+  	            <div class="col-xs-6 col-lg-4 placeholders ">
+  	                <a href="#"><img data-src="holdr.js/200x200/auto/sky" class="img-thumbnail .img-responsive" alt="Generic placeholder thumbnail" src="bootstrap/images/product4.jpg"></a>
+  	                <h5>Price 10$</h5>
+  	                <button type="button" class="btn btn-default navbar-btn">Buy Now</button>
+  	            </div><!--/.col-xs-6.col-lg-4-->
+  	            <div class="col-xs-6 col-lg-4 placeholders ">
+  	                <a href="#"><img data-src="holdr.js/200x200/auto/sky" class="img-thumbnail .img-responsive" alt="Generic placeholder thumbnail" src="bootstrap/images/product5.jpg"></a>
+  	                <h5>Price 10$</h5>
+  	                <button type="button" class="btn btn-default navbar-btn">Buy Now</button>
+  	            </div><!--/.col-xs-6.col-lg-4-->
+  	            <div class="col-xs-6 col-lg-4 placeholders ">
+  	                <a href="#"><img data-src="holdr.js/200x200/auto/sky" class="img-thumbnail .img-responsive" alt="Generic placeholder thumbnail" src="bootstrap/images/product6.jpg"></a>
+  	                <h5>Price 10$</h5>
+  	                <button type="button" class="btn btn-default navbar-btn">Buy Now</button>
+  	            </div><!--/.col-xs-6.col-lg-4-->
+  	            
+  	        </div><!--/row-->
+            <nav>
+              <ul class="pagination pull-right">
+                <li>
+                  <a href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                  </a>
+                </li>
+                <li><a href="#">1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+                <li><a href="#">4</a></li>
+                <li><a href="#">5</a></li>
+                <li>
+                  <a href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                  </a>
+                </li>
+              </ul>
+            </nav>
 
         </div><!--/.col-xs-12.col-sm-9-->
 
         <div class="col-xs-0 col-sm-2 sidebar-offcanvas sidebar1">
            <!--<a href="#"><img src="bootstrap/images/add.png" border="0" width="160" class="img-thumbnail .img-responsive"></a>-->
         	<h4>Best Seller</h4>
-            <hr>
+          <hr>
 	        <div class="row">
 	            <div class="col-xs-12 col-lg-12 placeholders ">
 	                <a href="#"><img data-src="holdr.js/200x200/auto/sky" class="img-thumbnail .img-responsive" alt="Generic placeholder thumbnail" src="bootstrap/images/product1.jpg"></a>
