--- a/Subject.html
+++ b/Subject.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Dashboard</title>
+    <title>Artificial Inteligent</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +43,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Dashboard</a></li>
+            <li><a href="Dashboard.html">Dashboard</a></li>
             <li><a href="#">Settings</a></li>
             <li><a href="#">Profile</a></li>
             <li><a href="#">Help</a></li>
@@ -59,51 +59,33 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="Dashboard.html">Overview <span class="sr-only">(current)</span></a></li>
+            <li><a href="Dashboard.html">Overview <span class="sr-only">(current)</span></a></li>
             <li><a href="#">Announcements <span class="badge">2</span></a></li>
             <li><a href="#">Subject</a></li>
             <li><a href="#">Export</a></li>
           </ul>
           <ul class="nav nav-sidebar">
-            <li><a href="Subject.html">Artificial Intelligence <span class="badge">1</span></a></li>
+            <li class="active"><a href="Subject.html">Artificial Intelligence</a></li>
             <li><a href="#">Literature</a></li>
             <li><a href="#">PHP</a></li>
             <li><a href="#">Web</a></li>
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <h1 class="page-header">Dashboard</h1>
-
           <div class="row placeholders">
-            <div class="col-xs-6 col-sm-3 placeholder">
+            <h1 class="page-header">Artificial Intelligence</h1>
+            <div class="col-xs-12 col-sm-12 placeholder">
              <a href="#"><img data-src="holdr.js/200x200/auto/sky" class="img-responsive" alt="Generic placeholder thumbnail" src="bootstrap/images/subject1.jpg"></a>
-              <h4><a href="#">Artificial Intelligence</a></h4>
-              <span class="text-muted"><a href="#">Teacher 1</a></span>
-            </div>
-            <div class="col-xs-6 col-sm-3 placeholder">
-              <a href="#"><img data-src="holder.js/200x200/auto/vine" class="img-responsive" alt="Generic placeholder thumbnail" src="bootstrap/images/subject2.png"></a>
-              <h4><a href="#">Literature</a></h4>
-              <span class="text-muted"><a href="#">Teacher 2</a></span>
-            </div>
-            <div class="col-xs-6 col-sm-3 placeholder">
-              <a href="#"><img data-src="holder.js/200x200/auto/sky" class="img-responsive" alt="Generic placeholder thumbnail" src="bootstrap/images/subject5.jpg" ></a>
-              <h4><a href="#">PHP</a></h4>
-              <span class="text-muted"><a href="#">Teacher 3</a></span>
-            </div>
-            <div class="col-xs-6 col-sm-3 placeholder">
-              <a href="#"><img data-src="holder.js/200x200/auto/vine" class="img-responsive" alt="Generic placeholder thumbnail" src="bootstrap/images/subject3.jpg" ></a>
-              <h4><a href="#">Web Programming</a></h4>
-              <span class="text-muted"><a href="#">Teacher 4</a></span>
             </div>
           </div>
 
-          <h2 class="sub-header">Schedule</h2>
+          <h2 class="sub-header">Reference</h2>
           <div class="table-responsive">
             <table class="table table-striped">
               <thead>
                 <tr>
                   <th>Time</th>
-                  <th>Subject</th>
+                  <th>Class</th>
                   <th>Description</th>
                   <th>Attent</th>
                 </tr>
@@ -111,50 +93,30 @@
               <tbody>
                 <tr>
                   <td class="text-danger">12h 15-12-2015</td>
-                  <td><a href="Subject.html">Artificial Intelligence</a></td>
+                  <td><a href="Play.html">Tut 4</a></td>
                   <td>Artificial Intelligence Tut 4</td>
                   <td><button type="button" class="btn btn-primary btn-sm">Join Class</button></td>
                 </tr>
                 <tr>
-                  <td class="text-danger">2h 19-12-2015</td>
-                  <td><a href="#">Literature</a></td>
-                  <td>Literature Poem</td>
-                  <td><button type="button" class="btn btn-primary btn-sm">Join Class</button></td>
+                  <td>2h 19-12-2015</td>
+                  <td><a href="#">Tut 3</a></td>
+                  <td>Artificial Intelligence Tut 3</td>
+                  <td><button type="button" class="btn btn-default btn-sm">Download</button></td>
                 </tr>
                 <tr>
-                  <td class="text-danger">10h 21-12-2015</td>
-                  <td><a href="#">Artificial Intelligence</a></td>
+                  <td>10h 21-12-2015</td>
+                  <td><a href="#">Tut 2</a></td>
                   <td>TUT 5</td>
-                  <td><button type="button" class="btn btn-primary btn-sm">Join Class</button></td>
+                  <td><button type="button" class="btn btn-default btn-sm">Download</button></td>
                 </tr>
                 <tr>
-                  <td class="text-danger">1h 1-12-2015</td>
-                  <td><a href="#">Web Programming</a></td>
+                  <td>1h 1-12-2015</td>
+                  <td><a href="#">Tut 1</a></td>
                   <td>AJAX and HTML</td>
-                  <td><button type="button" class="btn btn-primary btn-sm">Join Class</button></td>
+                  <td><button type="button" class="btn btn-default btn-sm">Download</button></td>
                 </tr>
               </tbody>
             </table>
-            <hr>
-            <nav>
-			  <ul class="pagination pull-right">
-			    <li>
-			      <a href="#" aria-label="Previous">
-			        <span aria-hidden="true">&laquo;</span>
-			      </a>
-			    </li>
-			    <li><a href="#">1</a></li>
-			    <li><a href="#">2</a></li>
-			    <li><a href="#">3</a></li>
-			    <li><a href="#">4</a></li>
-			    <li><a href="#">5</a></li>
-			    <li>
-			      <a href="#" aria-label="Next">
-			        <span aria-hidden="true">&raquo;</span>
-			      </a>
-			    </li>
-			  </ul>
-			</nav>
           </div>
         </div>
       </div>
